# edgedetector

./: .gitignore  CMakeLists.txt  README.md  auxiliary.hpp  edge-detector.cpp  edge-detector.hpp  file-utils.cpp  file-utils.hpp  image-factory.hpp  image.cpp  image.hpp  input.tga  kernel.hpp  kernels.hpp  main.cpp  output.tga  processing.hpp
Edgedetector/: Edgedetector.sln  Edgedetector.vcxproj  Edgedetector.vcxproj.filters  input.tga
